forth/test/fail/test_dot_call_plain_intrin_redefine.af
\ Must fail to compile.
fun: test_dot_call_plain_intrin_redefine_fail { -- err }
  [ redefine ]
end
